[gd_scene load_steps=10 format=3 uid="uid://mb8ykvr5nse1"]

[ext_resource type="Script" uid="uid://ci1qutkxavq0a" path="res://Scripts/scene scripts/Settings.gd" id="1_4hxq3"]
[ext_resource type="Texture2D" uid="uid://irmyl2mv6ebv" path="res://Sprites/background/country Platform/Background (by ansimuz).png" id="2_w1nw0"]
[ext_resource type="Texture2D" uid="uid://c1wy43lsbgqgf" path="res://Sprites/Objects/Sign-Board/Sign-board.png" id="3_4eoc7"]
[ext_resource type="Texture2D" uid="uid://buj806hrtv2nn" path="res://Sprites/Objects/Sign-Board/Sign-board-pressed.png" id="4_74x7w"]
[ext_resource type="Texture2D" uid="uid://dyakey5pserjp" path="res://Sprites/Objects/Sign-Board/Sign-board-hover.png" id="5_ys4a0"]
[ext_resource type="Script" uid="uid://b27nscwmna0wu" path="res://Scripts/scene scripts/goback.gd" id="6_eaxjk"]
[ext_resource type="AudioStream" uid="uid://cv3wog2lg0g4b" path="res://Sound/sfx/menu-button-88360.mp3" id="7_ci1r4"]
[ext_resource type="FontFile" uid="uid://dmknmcxlvkcm6" path="res://Miscealanous/m6x11plus.ttf" id="8_ecit4"]
[ext_resource type="AudioStream" uid="uid://qcpa5hxhebi4" path="res://Sound/mus/8-bit-video-game-background-music-loop-wood-chapter-368532.mp3" id="9_efosg"]

[node name="SettingsPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hxq3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1152, 336)
scale = Vector2(3, 3)
texture = ExtResource("2_w1nw0")

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 83.0
offset_bottom = 31.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_4eoc7")
texture_pressed = ExtResource("4_74x7w")
texture_hover = ExtResource("5_ys4a0")
script = ExtResource("6_eaxjk")

[node name="ButtonSound" type="AudioStreamPlayer" parent="Button"]
stream = ExtResource("7_ci1r4")
bus = &"SFX"

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = 26.0
offset_top = 2.0
offset_right = 66.0
offset_bottom = 25.0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("8_ecit4")
theme_override_font_sizes/font_size = 20
text = "go back"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(575, 153)
scale = Vector2(8, 8)
texture = ExtResource("3_4eoc7")

[node name="Label" type="Label" parent="Sprite2D2"]
offset_left = -19.375
offset_top = -8.375
offset_right = 42.625
offset_bottom = 14.625
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("8_ecit4")
text = "Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -86.0
offset_right = 228.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("3_4eoc7")
texture_pressed = ExtResource("4_74x7w")
texture_hover = ExtResource("5_ys4a0")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/ResetButton"]
layout_mode = 0
offset_left = 176.0
offset_top = 17.0
offset_right = 273.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("8_ecit4")
theme_override_font_sizes/font_size = 50
text = "Reset
"

[node name="FpsOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(216, 163)
scale = Vector2(4, 4)
texture = ExtResource("3_4eoc7")

[node name="MuteCheckBox" type="CheckBox" parent="VBoxContainer/Sprite2D"]
offset_left = -26.0
offset_top = -6.0
offset_right = 108.0
offset_bottom = 28.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ecit4")
theme_override_font_sizes/font_size = 25
text = "Mute Sound"

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(220, 242)
scale = Vector2(4, 4)
texture = ExtResource("3_4eoc7")

[node name="Musik" type="Label" parent="VBoxContainer/Sprite2D2"]
offset_left = -31.0
offset_top = -4.75
offset_right = 427.0
offset_bottom = 18.25
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("8_ecit4")
theme_override_font_sizes/font_size = 20
text = "Music Volume :"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/Sprite2D2"]
offset_left = -35.0
offset_top = 2.5
offset_right = 145.0
offset_bottom = 18.5
scale = Vector2(0.4, 0.4)

[node name="Sprite2D3" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(218, 322)
scale = Vector2(4, 4)
texture = ExtResource("3_4eoc7")

[node name="SFX" type="Label" parent="VBoxContainer/Sprite2D3"]
offset_left = -33.25
offset_top = -7.0
offset_right = 424.75
offset_bottom = 16.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("8_ecit4")
theme_override_font_sizes/font_size = 20
text = "Sound effect Volume :"

[node name="SfxSlider" type="HSlider" parent="VBoxContainer/Sprite2D3"]
offset_left = -34.75
offset_top = 1.75
offset_right = 145.25
offset_bottom = 17.75
scale = Vector2(0.4, 0.4)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_efosg")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/FpsOption" to="." method="_on_fps_option_item_selected"]
[connection signal="toggled" from="VBoxContainer/Sprite2D/MuteCheckBox" to="." method="_on_mute_check_box_toggled"]
[connection signal="value_changed" from="VBoxContainer/Sprite2D2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sprite2D3/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
